# house-pricing

./: .gitignore  README.md  bentofile.yaml  eda.py  house-pricing-model-simple.bentomodel  pyproject.toml  requirements.txt  service.py
.github/workflows/: deploy.yml
notebooks/: eda.ipynb  eda.py
