[project]
name = "house-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.3.18",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.4.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
